--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 results/20230519_0_multitask_model/fold0/best_model.pth
 results/20230519_1_multitask_model/fold0/best_model.pth
+results/20230523_2_multitask_model_1fold/fold0/best_model.pth
